Refactor security config, routes, and add frontend resource handling
Co-authored-by: hilaimane <hilaimane@gmail.com>